vertical align fix

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ figcaption {
   max-width: 25em;
   margin: 0 1.5rem;
   text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 h1 {
